<resources>
    <string name="app_name">Vkino</string>
    <string name="main">Главная</string>
    <string name="profile">Профиль</string>
    <string name="favorites">Избранное</string>
    <string name="search">Поиск</string>
    <string name="filter">Фильтр</string>
    <string name="poster">Poster</string>
    <string name="rating">Рейтинг:</string>
    <string name="category">Категория:</string>
    <string name="genre">Жанр:</string>
    <string name="year">Год:</string>
    <string name="quality">Качество:</string>
    <string name="translation">Перевод:</string>
    <string name="country">Страна:</string>
    <string name="duration">Продолжительность:</string>
    <string name="show_more">Показать еще</string>
    <string name="actors">Актер</string>
    <string name="composer">Композитор</string>
    <string name="director">Продюссер</string>
    <string name="similar_films">Похожие фильмы</string>
    <string name="searching">Идет поиск</string>
    <string name="choose_category">Выбрать категорию</string>
    <string name="choose_genre">Выбрать жанр</string>
    <string name="choose_country">Выбрать страну</string>
    <string name="choose_actor">Выбрать актера</string>
    <string name="choose_quality">Выбрать качество</string>
    <string name="clear">Сбросить</string>
    <string name="submit">Применить</string>
    <string name="categoryName">Категории</string>
    <string name="genreName">Жанры</string>
    <string name="countriesName">Страны</string>
    <string name="actorsName">Актеры</string>
    <string name="qualitiesName">Качество</string>
    <string name="sort_by_text">Сортировать по</string>
    <string name="desc">desc</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="forgot_pass"><u>Забыли пароль?</u></string>
    <string name="submit_auth">Войти</string>
    <string name="email">E-mail</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="gender">Пол</string>
    <string name="exit">Выйти</string>
    <string name="birthday">Дата рождения</string>
    <string name="about">О себе</string>
    <string name="save">Сохранить</string>
    <string name="change">Сменить</string>
    <string name="old_pass">Старый пароль</string>
    <string name="new_pass">Новый пароль</string>
    <string name="change_pass">Смена пароля</string>
</resources>