<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/main"/>
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/person"
        android:title="@string/profile"/>
    <item
        android:id="@+id/favoriteFragment"
        android:enabled="true"
        android:icon="@drawable/favorite"
        android:title="@string/favorites"/>
    <item
        android:id="@+id/searchFragment"
        android:enabled="true"
        android:icon="@drawable/search"
        android:title="@string/search"/>
    <item
        android:id="@+id/filterFragment"
        android:enabled="true"
        android:icon="@drawable/filter"
        android:title="@string/filter"/>
</menu>