<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/choose_category"
        android:textAllCaps="false"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/choose_genre"
        android:textAllCaps="false"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/choose_country"
        android:textAllCaps="false"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genre"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/actor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/choose_actor"
        android:textAllCaps="false"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/country"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/quality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_quality"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textAllCaps="false"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actor"/>

    <TextView
        android:id="@+id/year_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/year"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quality"/>

    <EditText
        android:id="@+id/editYearFrom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@drawable/search_input"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:imeOptions="actionNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/editYearTo"
        app:layout_constraintTop_toBottomOf="@id/year_text"/>

    <EditText
        android:id="@+id/editYearTo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@drawable/search_input"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:imeOptions="actionDone"
        app:layout_constraintStart_toEndOf="@id/editYearFrom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/year_text"/>

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/yearRange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        app:trackColorInactive="@color/gray"
        app:trackColorActive="@color/purple_700"
        app:thumbColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editYearFrom"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/clear"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sibmit"
        app:layout_constraintTop_toBottomOf="@id/yearRange"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sibmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/submit"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp"
        app:layout_constraintStart_toEndOf="@id/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/yearRange"/>

    <LinearLayout
        android:id="@+id/chosenGenresLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clear">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genreName"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-black"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chosenGenresList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>